<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RegisterEmailActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kenvector_future_thin"
            android:gravity="center"
            android:paddingBottom="50dp"
            android:text="@string/text_registration"
            android:textSize="34sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/input_text_1"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/input_text_1"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/input_text_1"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/input_text_1"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/button_play"
                android:fontFamily="@font/kenvector_future_thin"
                android:text="@string/register"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:fontFamily="@font/kenvector_future_thin"
                android:text="@string/do_you_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.6"
                android:background="@drawable/blue_button05"
                android:fontFamily="@font/kenvector_future_thin"
                android:gravity="center"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>