<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginEmailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@color/black"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kenvector_future"
                android:paddingTop="60dp"
                android:text="3ALEVELS"
                android:textColor="#3BD841"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:background="@drawable/splashscreen3"
                android:contentDescription="@string/logo_of_the_app" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/input_text_1">

            <!-- INPUT -->
            <EditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/username_icon"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@color/black"
                android:textSize="12sp"
                tools:ignore="RtlSymmetry" />

            <!-- ICON -->
            <ImageView
                android:id="@+id/username_icon"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:contentDescription="@string/username_icon"
                android:src="@drawable/email" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="12.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/input_text_1">

            <!-- INPUT -->
            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/icon"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@color/black"
                android:textSize="12sp"
                tools:ignore="RtlSymmetry" />

            <!-- ICON -->
            <ImageView
                android:id="@+id/icon"
                android:layout_width="14.7dp"
                android:layout_height="10.3dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:contentDescription="@string/password_icon"
                android:src="@drawable/password" />

        </RelativeLayout>


        <TextView
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="18.7dp"
            android:layout_marginRight="62dp"
            android:background="@color/black"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/sign_up"
            android:textColor="#1566e0"
            android:textSize="16sp" />



    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="13.7dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/or_continue_with"
                android:textColor="#aeaeae"
                android:textSize="24sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="35dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/google_login_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/common_google_signin_btn_icon_light_normal"
                android:contentDescription="@string/google_login_button" />

            <ImageView
                android:id="@+id/github_login_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/github_mark"
                android:contentDescription="@string/github_login_button" />

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>