<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#000000"
    tools:context=".HomeActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="200dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background_home_3" />

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/button_play"
            android:fontFamily="@font/kenvector_future"
            android:includeFontPadding="false"
            android:text="@string/Button_Play"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_normal"
            android:fontFamily="@font/kenvector_future"
            android:includeFontPadding="false"
            android:text="@string/Button_Option"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_normal"
            android:fontFamily="@font/kenvector_future"
            android:includeFontPadding="false"
            android:text="@string/Button_Credits"
            android:textSize="16sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/kenvector_future"
        android:text="@string/app_name"
        android:textColor="#89FF00"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button16"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/red_cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.661"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>